Plot most active users (by month), install Korean font for matplotlib

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -30,6 +30,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# install Korean fonts Nanum\n",
+        "!sudo apt-get install -y fonts-nanum\n",
+        "!sudo fc-cache -fv\n",
+        "!rm ~/.cache/matplotlib -rf"
+      ],
+      "metadata": {
+        "id": "fsiVocYw-RUN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install transformers"
       ],
       "metadata": {
@@ -44,7 +58,10 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.dates as mdates\n",
-        "from transformers import pipeline"
+        "import matplotlib.font_manager as fm\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "plt.rc('font', family='NanumBarunGothic') # set font to display Korean characters"
       ],
       "metadata": {
         "id": "4-ozJlMVJ2CB"
@@ -63,6 +80,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Read file"
+      ],
+      "metadata": {
+        "id": "zE7RHgPI-0iV"
+      }
     },
     {
       "cell_type": "code",
@@ -129,6 +155,152 @@
       ],
       "metadata": {
         "id": "VrXakjh_bGKv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Most Active Users"
+      ],
+      "metadata": {
+        "id": "Ncsay1Z854R_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group by 'Author' and count the number of posts\n",
+        "author_post_counts = df.groupby('Author').size()\n",
+        "\n",
+        "# Sort the authors by the number of posts in descending order and select the top 20\n",
+        "top_authors = author_post_counts.sort_values(ascending=False).head(20)"
+      ],
+      "metadata": {
+        "id": "_kTPU2fP567X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plotting\n",
+        "plt.figure(figsize=(10, 6))  # Increased figure size\n",
+        "top_authors.plot(kind='bar', align='center')\n",
+        "\n",
+        "plt.title('Number of Posts by Top 20 Authors')\n",
+        "plt.xlabel('Author')\n",
+        "plt.ylabel('Number of Posts')\n",
+        "plt.xticks(rotation=45, ha='center')  # Rotate the labels vertically and align at center\n",
+        "\n",
+        "plt.tight_layout()  # Adjust layout\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "mWkQBGpB6jXv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Top 20 Most Active Users by Each Month"
+      ],
+      "metadata": {
+        "id": "QOVha2aK9i92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ensure that 'Timestamp' is a DateTime object\n",
+        "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+        "\n",
+        "# Extract the year and month from 'Timestamp'\n",
+        "df['YearMonth'] = df['Timestamp'].dt.to_period('M')\n",
+        "\n",
+        "# Group by 'YearMonth' and 'Author', and count the number of posts\n",
+        "author_post_counts = df.groupby(['YearMonth', 'Author']).size().reset_index(name='PostCount')"
+      ],
+      "metadata": {
+        "id": "dIvlGq_X9fuN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "List all the available months"
+      ],
+      "metadata": {
+        "id": "okui7ftY_90N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get unique YearMonth values\n",
+        "unique_yearmonths = df['YearMonth'].unique()\n",
+        "\n",
+        "# Print the unique YearMonth values\n",
+        "print(unique_yearmonths)"
+      ],
+      "metadata": {
+        "id": "nG_ucVLi_6yN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to plot top 20 authors for a given year and month\n",
+        "def plot_top_authors_for_month(year_month):\n",
+        "\n",
+        "    # Check if the input format is correct (e.g., '2023-05')\n",
+        "    try:\n",
+        "        year_month = pd.Period(year_month, freq='M')\n",
+        "    except:\n",
+        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "        return\n",
+        "    # Check if the year_month exists in the dataset\n",
+        "    if year_month not in df['YearMonth'].values:\n",
+        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
+        "        return\n",
+        "\n",
+        "    # Filter the data for the given year and month\n",
+        "    month_data = author_post_counts[author_post_counts['YearMonth'] == year_month]\n",
+        "\n",
+        "    # Get the top 20 authors for the month\n",
+        "    top_authors = month_data.sort_values(by='PostCount', ascending=False).head(20)\n",
+        "\n",
+        "    # Plotting\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    top_authors.set_index('Author')['PostCount'].plot(kind='bar')\n",
+        "    plt.title(f'Top 20 Authors in {year_month}')\n",
+        "    plt.xlabel('Author')\n",
+        "    plt.ylabel('Number of Posts')\n",
+        "    plt.xticks(rotation=45)\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "bpsfiQBp8u7O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example usage\n",
+        "plot_top_authors_for_month('2024-01')  # Replace with the desired year-month"
+      ],
+      "metadata": {
+        "id": "l5QVPKoI872u"
       },
       "execution_count": null,
       "outputs": []
