Apply sentiment analysis to dataset

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "1NETUgleJ0NK"
+        "1NETUgleJ0NK",
+        "Ncsay1Z854R_"
       ],
       "toc_visible": true
     },
@@ -28,9 +29,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install Korean fonts Nanum for Google Colab, needs to restart runtime after installation"
+      ],
+      "metadata": {
+        "id": "I4v5JHx5S2hO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# install Korean fonts Nanum\n",
         "!sudo apt-get install -y fonts-nanum\n",
         "!sudo fc-cache -fv\n",
         "!rm ~/.cache/matplotlib -rf"
@@ -97,6 +106,38 @@
       ],
       "metadata": {
         "id": "_2H9lm28Zc4g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Check content validity"
+      ],
+      "metadata": {
+        "id": "D2nz-NLu3D5R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check if each row in the 'Content' column is valid (not NaN or None)\n",
+        "df['isValidContent'] = df['Content'].apply(lambda x: not pd.isna(x))\n",
+        "\n",
+        "# Count the number of lines\n",
+        "num_lines = df.shape[0]\n",
+        "# Count the number of valid lines\n",
+        "num_valid_lines = df['isValidContent'].sum()\n",
+        "\n",
+        "# Print the number of valid lines\n",
+        "print(f\"Number of lines: {num_lines}, Number of valid lines in 'Content': {num_valid_lines}\")\n",
+        "\n",
+        "# Drop the 'isValidContent' column from the DataFrame\n",
+        "df.drop(columns=['isValidContent'], inplace=True)"
+      ],
+      "metadata": {
+        "id": "VsALzHhW3C3V"
       },
       "execution_count": null,
       "outputs": []
@@ -193,7 +234,7 @@
         "plt.title('Number of Posts by Top 20 Authors')\n",
         "plt.xlabel('Author')\n",
         "plt.ylabel('Number of Posts')\n",
-        "plt.xticks(rotation=45, ha='center')  # Rotate the labels vertically and align at center\n",
+        "plt.xticks(rotation=45, ha='right')\n",
         "\n",
         "plt.tight_layout()  # Adjust layout\n",
         "plt.show()"
@@ -284,7 +325,7 @@
         "    plt.title(f'Top 20 Authors in {year_month}')\n",
         "    plt.xlabel('Author')\n",
         "    plt.ylabel('Number of Posts')\n",
-        "    plt.xticks(rotation=45)\n",
+        "    plt.xticks(rotation=45, ha='right')\n",
         "    plt.show()"
       ],
       "metadata": {
@@ -297,7 +338,7 @@
       "cell_type": "code",
       "source": [
         "# Example usage\n",
-        "plot_top_authors_for_month('2024-01')  # Replace with the desired year-month"
+        "plot_top_authors_for_month('2023-07')  # Replace with the desired year-month"
       ],
       "metadata": {
         "id": "l5QVPKoI872u"
@@ -317,7 +358,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Test Data"
+        "## Test Data"
       ],
       "metadata": {
         "id": "HB5eRhEngQTt"
@@ -338,10 +379,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## bert-base-cased-Korean-sentiment\n",
+        "## WhitePeak/bert-base-cased-Korean-sentiment\n",
         "\n",
         "LABEL_0: negative,\n",
-        "LABEL_1: positive.  Obtained 70% Accuracy with test dataset."
+        "LABEL_1: positive.  \n",
+        "\n",
+        "Accuracy Result on test dataset: 70%."
       ],
       "metadata": {
         "id": "EsUzswpVgASl"
@@ -363,14 +406,15 @@
       "source": [
         "# Function to apply the sentiment pipeline and determine the label\n",
         "def get_sentiment_label(text):\n",
-        "    result = sentiment_pipeline(text)[0]\n",
+        "    # Truncate the text to the maximum length of the model (512 tokens)\n",
+        "    result = sentiment_pipeline(text, truncation=True)[0]\n",
         "    label = result['label'][-1]\n",
         "    score = result['score']\n",
         "\n",
         "    # Set label to 2 (neutral) if score is less than 0.6\n",
         "    if score < 0.6:\n",
         "        label = '2'\n",
-        "    return label, score"
+        "    return label"
       ],
       "metadata": {
         "id": "3TOV1T9vz1uV"
@@ -379,10 +423,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Apply to test dataset"
+      ],
+      "metadata": {
+        "id": "XgFWa7cU4SVL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Apply the sentiment_pipeline to each row in the 'text' column\n",
-        "test_df[['predicted_label', 'sentiment_score']] = test_df['Text'].apply(\n",
+        "test_df[['predicted_label']] = test_df['Text'].apply(\n",
         "    lambda x: pd.Series(get_sentiment_label(x))\n",
         ")"
       ],
@@ -413,9 +466,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ChatGPT\n",
+        "Apply to original dataset"
+      ],
+      "metadata": {
+        "id": "2WkbBkvs4V2M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Apply the sentiment_pipeline to each row in the 'Content' column\n",
+        "df[['Sentiment']] = df['Content'].apply(\n",
+        "    lambda x: pd.Series(get_sentiment_label(x))\n",
+        ")\n",
         "\n",
-        "Simply asked ChatGPT to label the test data with negative (0), positive (1), or neutral (2): Accuracy 100%."
+        "print(df.head())\n",
+        "\n",
+        "# Save the result back to the CSV\n",
+        "df.to_csv('/content/drive/MyDrive/cleaned_chat_data_with_sentiments.csv', index=False, encoding='utf-8-sig')"
+      ],
+      "metadata": {
+        "id": "wJLb_qvR4EdT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ChatGPT - GPT4\n",
+        "\n",
+        "Simply asked GPT-4 to label the test data with negative (0), positive (1), or neutral (2)\n",
+        "\n",
+        "Accuracy Result on test dataset: 100%.\n",
+        "\n",
+        "\n",
+        "**Reference:**\n",
+        "\n",
+        "* Gilardi, Fabrizio, Meysam Alizadeh, and Maël Kubli. \"Chatgpt outperforms crowd-workers for text-annotation tasks.\" arXiv preprint arXiv:2303.15056 (2023)."
       ],
       "metadata": {
         "id": "36-yn_x21_nb"
