Visualize sentiment with pie chart

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -508,6 +508,63 @@
       "metadata": {
         "id": "36-yn_x21_nb"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Visualization"
+      ],
+      "metadata": {
+        "id": "TFvNAuLdhjeI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read the data with sentiment\n",
+        "df_sentiment = pd.read_csv('/content/drive/MyDrive/cleaned_chat_data_with_sentiments.csv', encoding='utf-8-sig')"
+      ],
+      "metadata": {
+        "id": "nlXEV50UivaP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Map the numerical labels to descriptive names\n",
+        "sentiment_label_map = {\n",
+        "    0: 'Negative',\n",
+        "    1: 'Positive',\n",
+        "    2: 'Neutral'\n",
+        "}\n",
+        "df_sentiment['Sentiment'] = df_sentiment['Sentiment'].map(sentiment_label_map)\n",
+        "\n",
+        "# Count the frequency of each sentiment label\n",
+        "sentiment_counts = df_sentiment['Sentiment'].value_counts()"
+      ],
+      "metadata": {
+        "id": "APpUS-Mvi6kP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a pie chart\n",
+        "plt.figure(figsize=(6, 6))\n",
+        "plt.pie(sentiment_counts, labels=sentiment_counts.index, autopct='%1.1f%%', startangle=140)\n",
+        "plt.title('Distribution of Sentiments', pad=20)\n",
+        "plt.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "xMcVTO9ohk_p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
