Display top frequent terms per month

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -4,10 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "1NETUgleJ0NK",
-        "Ncsay1Z854R_"
-      ],
       "toc_visible": true
     },
     "kernelspec": {
@@ -64,11 +60,24 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install konlpy"
+      ],
+      "metadata": {
+        "id": "sF3cg8lcZsv7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.dates as mdates\n",
         "import matplotlib.font_manager as fm\n",
         "from transformers import pipeline\n",
+        "from collections import Counter\n",
+        "from konlpy.tag import Okt\n",
         "\n",
         "plt.rc('font', family='NanumBarunGothic') # set font to display Korean characters"
       ],
@@ -93,7 +102,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Read file"
+        "# File Processing"
       ],
       "metadata": {
         "id": "zE7RHgPI-0iV"
@@ -113,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Check content validity"
+        "## Content Validity Check"
       ],
       "metadata": {
         "id": "D2nz-NLu3D5R"
@@ -138,6 +147,35 @@
       ],
       "metadata": {
         "id": "VsALzHhW3C3V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Monthly Analysis Preparation"
+      ],
+      "metadata": {
+        "id": "5zdQAivMcJkB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ensure that 'Timestamp' is a DateTime object\n",
+        "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+        "\n",
+        "# Extract the year and month from 'Timestamp'\n",
+        "df['YearMonth'] = df['Timestamp'].dt.to_period('M')\n",
+        "\n",
+        "# List all the available months\n",
+        "# Get unique YearMonth values\n",
+        "unique_yearmonths = df['YearMonth'].unique()\n",
+        "print(unique_yearmonths)"
+      ],
+      "metadata": {
+        "id": "dIvlGq_X9fuN"
       },
       "execution_count": null,
       "outputs": []
@@ -248,7 +286,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Top 20 Most Active Users by Each Month"
+        "## Top 20 Active Users per Month"
       ],
       "metadata": {
         "id": "QOVha2aK9i92"
@@ -257,38 +295,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ensure that 'Timestamp' is a DateTime object\n",
-        "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
-        "\n",
-        "# Extract the year and month from 'Timestamp'\n",
-        "df['YearMonth'] = df['Timestamp'].dt.to_period('M')\n",
-        "\n",
         "# Group by 'YearMonth' and 'Author', and count the number of posts\n",
         "author_post_counts = df.groupby(['YearMonth', 'Author']).size().reset_index(name='PostCount')"
-      ],
-      "metadata": {
-        "id": "dIvlGq_X9fuN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "List all the available months"
-      ],
-      "metadata": {
-        "id": "okui7ftY_90N"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Get unique YearMonth values\n",
-        "unique_yearmonths = df['YearMonth'].unique()\n",
-        "\n",
-        "# Print the unique YearMonth values\n",
-        "print(unique_yearmonths)"
       ],
       "metadata": {
         "id": "nG_ucVLi_6yN"
@@ -342,6 +350,110 @@
       ],
       "metadata": {
         "id": "l5QVPKoI872u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Term Frequency"
+      ],
+      "metadata": {
+        "id": "g8AIs2cWQ3av"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tokenizer"
+      ],
+      "metadata": {
+        "id": "2YAUw_BBi5En"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize the tokenizer\n",
+        "okt = Okt()\n",
+        "\n",
+        "# Define a list of words to be excluded\n",
+        "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
+        "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
+        "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
+        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명'])\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    # Extract nouns\n",
+        "    return [word for word in okt.nouns(text) if word not in stop_words]"
+      ],
+      "metadata": {
+        "id": "oLOqd1bWQ8Xn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Top 20 Terms per Month"
+      ],
+      "metadata": {
+        "id": "rkfb5F4acsv6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to plot top frequent terms for a given year and month\n",
+        "def plot_top_terms_for_month(year_month):\n",
+        "    try:\n",
+        "        year_month = pd.Period(year_month, freq='M')\n",
+        "    except:\n",
+        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "        return\n",
+        "\n",
+        "    if year_month not in df['YearMonth'].values:\n",
+        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
+        "        return\n",
+        "\n",
+        "    # Filter the data for the given year and month\n",
+        "    month_data = df[df['YearMonth'] == year_month]['Content'].dropna()\n",
+        "\n",
+        "    # Tokenize and count terms\n",
+        "    terms = month_data.apply(tokenize).sum()\n",
+        "    term_counts = Counter(terms)\n",
+        "\n",
+        "    # Get the most common terms\n",
+        "    most_common_terms = term_counts.most_common(20)\n",
+        "\n",
+        "    # Prepare data for visualization\n",
+        "    terms, counts = zip(*most_common_terms)\n",
+        "\n",
+        "    # Create a bar chart\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    plt.bar(terms, counts)\n",
+        "    plt.title(f'Top 20 Frequent Terms in {year_month}')\n",
+        "    plt.xlabel('Terms')\n",
+        "    plt.ylabel('Frequency')\n",
+        "    plt.xticks(rotation=45)\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "6FrcX1yudFsa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example usage\n",
+        "plot_top_terms_for_month('2023-03')  # Replace with the desired year-month"
+      ],
+      "metadata": {
+        "id": "8_6qlP9YdI9K"
       },
       "execution_count": null,
       "outputs": []
