Generate word cloud

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "collapsed_sections": [
+        "D2nz-NLu3D5R",
+        "5zdQAivMcJkB",
+        "1NETUgleJ0NK",
+        "Ncsay1Z854R_"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -49,21 +54,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install transformers"
-      ],
-      "metadata": {
-        "id": "cEgHEp-OBLfO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!pip install konlpy"
       ],
       "metadata": {
-        "id": "sF3cg8lcZsv7"
+        "id": "hdOQV26APfzM"
       },
       "execution_count": null,
       "outputs": []
@@ -72,12 +66,15 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.dates as mdates\n",
         "import matplotlib.font_manager as fm\n",
         "from transformers import pipeline\n",
         "from collections import Counter\n",
         "from konlpy.tag import Okt\n",
+        "from wordcloud import WordCloud\n",
+        "from PIL import Image\n",
         "\n",
         "plt.rc('font', family='NanumBarunGothic') # set font to display Korean characters"
       ],
@@ -382,7 +379,9 @@
         "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
         "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
         "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
-        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명'])\n",
+        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명',\n",
+        "                  '넹', '은', '및', '알', '데', '중', '도', '건', '로',\n",
+        "                  '게', '를', '여'])\n",
         "\n",
         "def tokenize(text):\n",
         "    # Extract nouns\n",
@@ -404,9 +403,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Bar Chart"
+      ],
+      "metadata": {
+        "id": "9-pE5zRpTtE7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Function to plot top frequent terms for a given year and month\n",
+        "# Function to generate bar chart for top frequent terms for a given year and month\n",
         "def plot_top_terms_for_month(year_month):\n",
         "    try:\n",
         "        year_month = pd.Period(year_month, freq='M')\n",
@@ -450,10 +458,85 @@
       "cell_type": "code",
       "source": [
         "# Example usage\n",
-        "plot_top_terms_for_month('2023-03')  # Replace with the desired year-month"
+        "plot_top_terms_for_month('2023-12')  # Replace with the desired year-month"
       ],
       "metadata": {
         "id": "8_6qlP9YdI9K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Word Cloud"
+      ],
+      "metadata": {
+        "id": "buLnCNYLTu7r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load mask image\n",
+        "mask_image = np.array(Image.open('/content/bear.jpg'))"
+      ],
+      "metadata": {
+        "id": "Gx0X_1U1Tw8Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to generate a word cloud for a given year and month\n",
+        "def generate_wordcloud_for_month(year_month, mask):\n",
+        "    try:\n",
+        "        year_month = pd.Period(year_month, freq='M')\n",
+        "    except:\n",
+        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "        return\n",
+        "\n",
+        "    if year_month not in df['YearMonth'].values:\n",
+        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
+        "        return\n",
+        "\n",
+        "    # Filter the data for the given year and month\n",
+        "    month_data = df[df['YearMonth'] == year_month]['Content'].dropna()\n",
+        "\n",
+        "    # Tokenize and count terms, filtering out stop words\n",
+        "    terms = month_data.apply(tokenize).sum()\n",
+        "    term_string = ' '.join(terms)  # Join all terms into a single string\n",
+        "\n",
+        "    # Generate a word cloud\n",
+        "    wordcloud = WordCloud(font_path='/usr/share/fonts/truetype/nanum/NanumBarunGothic.ttf',\n",
+        "                          width=800, height=800,\n",
+        "                          background_color='white',\n",
+        "                          max_font_size=160,\n",
+        "                          mask=mask).generate(term_string)\n",
+        "\n",
+        "    # Display the word cloud\n",
+        "    plt.figure(figsize=(10, 10))\n",
+        "    plt.imshow(wordcloud, interpolation='bilinear')\n",
+        "    plt.axis('off')\n",
+        "    plt.title(f'Word Cloud for {year_month}')\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "7Y1zVkGaQMr1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example usage\n",
+        "generate_wordcloud_for_month('2023-08', mask_image)  # Replace with the desired year-month"
+      ],
+      "metadata": {
+        "id": "7AN0uOfaQkVt"
       },
       "execution_count": null,
       "outputs": []
@@ -677,6 +760,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Topic Modeling"
+      ],
+      "metadata": {
+        "id": "pqOMZOX8qAk0"
+      }
     }
   ]
 }
