Test LDA method for topic modeling

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -4,12 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "D2nz-NLu3D5R",
-        "5zdQAivMcJkB",
-        "1NETUgleJ0NK",
-        "Ncsay1Z854R_"
-      ]
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -75,6 +70,8 @@
         "from konlpy.tag import Okt\n",
         "from wordcloud import WordCloud\n",
         "from PIL import Image\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.decomposition import LatentDirichletAllocation\n",
         "\n",
         "plt.rc('font', family='NanumBarunGothic') # set font to display Korean characters"
       ],
@@ -405,7 +402,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Bar Chart"
+        "### Bar Chart"
       ],
       "metadata": {
         "id": "9-pE5zRpTtE7"
@@ -469,7 +466,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Word Cloud"
+        "### Word Cloud"
       ],
       "metadata": {
         "id": "buLnCNYLTu7r"
@@ -769,6 +766,137 @@
       "metadata": {
         "id": "pqOMZOX8qAk0"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Latent Dirichlet Allocation (LDA)"
+      ],
+      "metadata": {
+        "id": "OP_16PF02HUG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tokenizer"
+      ],
+      "metadata": {
+        "id": "6dwWwSCm96Ez"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize the tokenizer\n",
+        "okt = Okt()\n",
+        "\n",
+        "# Define a list of words to be excluded\n",
+        "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
+        "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
+        "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
+        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명',\n",
+        "                  '넹', '은', '및', '알', '데', '중', '도', '건', '로',\n",
+        "                  '게', '를', '여'])\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    tokens = [word for word in okt.nouns(text) if word not in stop_words]\n",
+        "    return ' '.join(tokens)  # Join tokens back into a string"
+      ],
+      "metadata": {
+        "id": "51neS98395g8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Processing with partial data for test"
+      ],
+      "metadata": {
+        "id": "8KEgPddmDiJ2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_LDAtest = df.head(1000).copy()"
+      ],
+      "metadata": {
+        "id": "yGu9Wyam2I7t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_LDAtest['tokenized'] = df_LDAtest['Content'].apply(tokenize)\n",
+        "\n",
+        "# Vectorize the text\n",
+        "vectorizer = CountVectorizer(max_features=1000)\n",
+        "X = vectorizer.fit_transform(df_LDAtest['tokenized'])\n",
+        "\n",
+        "# Apply LDA\n",
+        "lda = LatentDirichletAllocation(n_components=5, random_state=0)  # Adjust number of topics (n_components)\n",
+        "lda.fit(X)"
+      ],
+      "metadata": {
+        "id": "wL1o6ADe-HDq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Visuaization"
+      ],
+      "metadata": {
+        "id": "Km-nEeAADnRB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_top_words(model, feature_names, n_top_words, title):\n",
+        "    fig, axes = plt.subplots(1, 5, figsize=(25, 5), sharex=True) # 1 row, 5 subfigures\n",
+        "    axes = axes.flatten()\n",
+        "    for topic_idx, topic in enumerate(model.components_):\n",
+        "        top_features_ind = topic.argsort()[-n_top_words:]\n",
+        "        top_features = feature_names[top_features_ind]\n",
+        "        weights = topic[top_features_ind]\n",
+        "\n",
+        "        ax = axes[topic_idx]\n",
+        "        ax.barh(top_features, weights, height=0.7)\n",
+        "        ax.set_title(f\"Topic {topic_idx +1}\", fontdict={\"fontsize\": 18})\n",
+        "        ax.tick_params(axis=\"both\", which=\"major\", labelsize=15)\n",
+        "        for i in \"top right left\".split():\n",
+        "            ax.spines[i].set_visible(False)\n",
+        "        fig.suptitle(title, fontsize=24, y=1.05) # Increasing the y value moves the title higher\n",
+        "\n",
+        "    plt.subplots_adjust(top=0.90, bottom=0.05, wspace=0.90, hspace=0.3)\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "fQ5il-mj_wrS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Call the plot_top_words function with the LDA model\n",
+        "n_top_words = 10\n",
+        "plot_top_words(lda, vectorizer.get_feature_names_out(), n_top_words, \"Topics in LDA model\")"
+      ],
+      "metadata": {
+        "id": "EM1eDJTz-Pkk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
